@@ -210,3 +210,4 @@ issue 225: .setGlobalModName() on ItemFactories did not work as needed; fixed on
 issue 226: when ItemAtlas scheduled missing texture for texture, it still crashed; fixed on 06.07.2020 by uuk
 issue 227: ItemFactory's template system was broken; fixed on 06.07.2020 by uuk
 issue 228: logger was prefixing every part with time, not only the front; fixed on 06.07.2020 by uuk
+issue 229: Player.teleport() was not updating G.world's active dimension; fixed on 06.07.2020 by uuk
