@@ -160,4 +160,4 @@ issue 218:
 issue 219:
     bug: errors with block showing are printed multiply times in BlockItemGenerator
 
-[220-228]
+[220-229]
