@@ -1,0 +1,14 @@
+"""mcpython - a minecraft clone written in pure python licenced under MIT-licence
+authors: uuk, xkcdjerry (inactive)
+
+based on the game of fogleman (https://github.com/fogleman/Minecraft) licenced under MIT-licence
+original game "minecraft" by Mojang (www.minecraft.net)
+mod loader inspired by "minecraft forge" (https://github.com/MinecraftForge/MinecraftForge)
+
+blocks based on 1.15.2.jar of minecraft, downloaded on 1th of February, 2020"""
+import globals as G
+
+config = {"layers": []}
+
+G.worldgenerationhandler.register_world_gen_config("default_nether", config)
+
