@@ -1198,3 +1198,5 @@ sstarted these clone on 12th of July, 2019
 [uuk]: item name can now be based to the constructor of ItemFactory and to the () of an instance
 [uuk]: fixed logger prefixing every part with time (issue 228)
 [uuk]: added preparing for locked registries (currently only warned by the system)
+[uuk]: added /execute in sub-command
+[uuk]: /teleport will now teleport the player also into the new dimension when needed
