@@ -66,6 +66,8 @@ changelog of snapshot [next] (theme: fixing stuff & upgrading base to 1.16)
     - added button to delete world in world selection screen
     - registries get now "locked" after mod loading finished (they are still write-able, but this will get removed in
         the future as it will get replaced by reload-registries-events)
+    - added /execute in <dimension id> sub-command
+    - /teleport allows now the player to also change dimension
 
     fixed issues:
         from previous snapshot:
